* Don't include security sensitive information in the changelog
* Include links to documentation if possible
////

= Gentics Mesh Changelog

[[expected]]
== Planned Future Changes

* The `html` field type will be **removed** in the future. Instead the `string` should be used in combination with an additional configuration property for this field in the schema.

[[v0.24.1]]
== 0.24.1 (TBD)

icon:check[] Core: A inconsistency within the webroot path handling has been fixed. Previously the webroot path uniqueness checks would not work correctly once another branch has been added.

[[v0.24.0]]
== 0.24.0 (25.07.2018)

CAUTION: The default value of `25` for the `perPage` parameter has been removed. By default all elements will be returned and no paging will be applied.

icon:check[] Core: A regression within the webroot performance enhancement fix of `0.23.0` has been fixed.

[[v0.23.0]]
== 0.23.0 (24.07.2018)

CAUTION: The breadcrumb of the REST node response and the breadcrumb of the node type in GraphQL has changed. The first element is now the root node of the project followed by its descendants including the currently queried node. Previously the order was reversed. Additionally the root node and the current were missing. link:https://github.com/gentics/mesh/issues/398[#398]

CAUTION: The concept of releases has been renamed into branches. The database structure will automatically be updated.

* The following query parameters have been changed: `release` -> `branch`,  `updateAssignedReleases` -> `updateAssignedBranches`, `updateReleaseNames` -> `updateBranchNames`
* The `releases` endpoint was renamed to `branches`.
* The `mesh.release.created`, `mesh.release.updated`, `mesh.release.deleted` events have been changed to `mesh.branch.created`, `mesh.branch.updated`, `mesh.branch.deleted`.
* The Java REST Models have been renamed. (e.g.: ReleaseCreateRequest -> BranchCreateRequest)
* I18n messages have been changed accordingly.