@@ -18,6 +18,8 @@
 [[v0.24.1]]
 == 0.24.1 (TBD)
 
+icon:plus[] Config: It is now possible to configure the path to the mesh lock file using the `MESH_LOCK_PATH` environment variable. link:https://github.com/gentics/mesh/issues/506[#506]
+
 icon:check[] Core: A inconsistency within the webroot path handling has been fixed. Previously the webroot path uniqueness checks would not work correctly once another branch has been added.
 
 [[v0.24.0]]
